<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intrebare"
    android:background="@drawable/quiz_final_form">

    <ImageView
        android:id="@+id/Sicu_Bogdan_Andrei_image_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/Sicu_Bogdan_Andrei_answer1_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@drawable/urs_brum" />

    <Button
        android:id="@+id/Sicu_Bogdan_Andrei_answer1_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer1"
        app:layout_constraintBottom_toTopOf="@id/Sicu_Bogdan_Andrei_answer3_btn"
        app:layout_constraintEnd_toStartOf="@id/Sicu_Bogdan_Andrei_answer2_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/Sicu_Bogdan_Andrei_answer2_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer2"
        app:layout_constraintBottom_toTopOf="@id/Sicu_Bogdan_Andrei_answer4_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Sicu_Bogdan_Andrei_answer1_btn"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/Sicu_Bogdan_Andrei_answer3_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer3"
        app:layout_constraintBottom_toTopOf="@id/Sicu_Bogdan_Andrei_quit_and_save_btn"
        app:layout_constraintEnd_toStartOf="@id/Sicu_Bogdan_Andrei_answer4_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button"/>


    <Button
        android:id="@+id/Sicu_Bogdan_Andrei_answer4_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer4"
        app:layout_constraintBottom_toTopOf="@id/Sicu_Bogdan_Andrei_quit_and_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Sicu_Bogdan_Andrei_answer3_btn"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/Sicu_Bogdan_Andrei_quit_and_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Quit_and_save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>